refactor(search-service): 完全重写，遵循 item-service DDD 规范
修改:
- pom.xml: 加 ia-api/MapStruct/AOP 依赖
- application.yml: 数据库切到 icedamericano_mall，加 mybatis-plus 配置
- SearchApplication: 加 @MapperScan + @EnableFeignClients
- ElasticSearchConfig: 去硬编码密码，简化 RestClient

新建:
- MyMetaObjectHandler: createTime/updateTime 自动填充
- ProductEntity/SkuEntity: 精简实体，映射主库 product/sku 表
- ProductMapper/SkuMapper: MyBatis-Plus mapper
- ProductSearchVO: 搜索结果 VO
- ProductSearchConverter: MapStruct 转换

重写:
- SearchService: 加 getHotKeywords(limit) + getSearchHistory(userId,limit)
- DbSearchServiceImpl: 用 MyBatis-Plus lambdaQuery 替代 JdbcTemplate
  LIKE '%keyword%' → .like(lambda, keyword) 参数化杜绝 SQL 注入
  热门关键词 + 搜索历史: Redis Sorted Set / List 实时写入
- EsSearchServiceImpl: Redis 热门关键词 + 搜索历史
- SearchController: GET /product, /hot, /history (3 端点)
- InternalSearchController: reindex 用 MyBatis-Plus + ES Bulk API

删除:
- ProductSearchResult (旧 DTO)

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>